After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725568 - Crashes when cancelling the Quit confirmation dialog and then running again
Crashes when cancelling the Quit confirmation dialog and then running again
Status: RESOLVED FIXED
Product: easytag
Classification: Other
Component: general
2.1.x
Other All
: Normal critical
: 2.1
Assigned To: EasyTAG maintainer(s)
EasyTAG maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-03-03 13:02 UTC by David King
Modified: 2014-03-03 16:54 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description David King 2014-03-03 13:02:06 UTC
As reported by Igor Gnatenko, EasyTAG can be made to crash quite easily when quitting. Steps to reproduce:

1. start the application
2. quit the application (making sure that the confirmation dialogue is enabled)
3. cancel the confirmation dialogue with Escape
4. repeat steps 2 and 3 until the window is closed, and EasyTAG remains running
5. start another instance of EasyTAG
6. the first instance segfaults
Comment 1 David King 2014-03-03 16:54:24 UTC
One critical bit of information that I missed from the initial bug report is that, in step 2, the window close button must be pressed to quit the application, which triggers a "delete-event" signal. The handler for this signal in EasyTAG is not correct, as it should return a gboolean which determines whether to continue or to stop propagation of the event. As it returns void, whether the event is propagated is down to chance, and when it does the default handler is invoked and the main window is destroyed.

I fixed this in master as 5442958d1ea34a992007bbb2bc047a9a5515387d.